rest api and swagger documentation working fine